kubernetes/observability-ingress/templates/ingress.yaml
# Ingress for grafana if you installed `microk8s enable observability`
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prom-stack-grafana
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.bauerlein.dev
    secretName: kube-prom-stack-grafana-tls
  rules:
  - host: grafana.bauerlein.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prom-stack-grafana
            port:
              number: 3000
